fix: text-align start, remove hanging </li>

--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
     background-color: #111;
     color: white;
     font-family: 'Courier New', monospace;
-    text-align: center;
+    text-align: start;
 }
 
 main {
